force-app/main/default/objects/MUSW__RM_Custom_Buttons__mdt/MUSW__RM_Custom_Buttons__mdt.object-meta.xml
<CustomObject>
    <description>Customized url buttons on the record manage page.</description>
    <label>Record Manage Custom Action</label>
    <pluralLabel>Record Manage Custom Actions</pluralLabel>
</CustomObject>