force-app/main/default/objects/MUSW__RM_Custom_Buttons__mdt/fields/MUSW__Button_Action__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Button_Action__c</fullName>
    <inlineHelpText>A relative URL path.</inlineHelpText>
    <label>Button Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>