force-app/main/default/objects/MUSW__RM_Custom_Buttons__mdt/fields/MUSW__Button_Label__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Button_Label__c</fullName>
    <inlineHelpText>Text on the button that the end user will see.</inlineHelpText>
    <label>Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>