force-app/main/default/objects/MUSW__RM_Custom_Buttons__mdt/fields/MUSW__Profile_Permissions__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Profile_Permissions__c</fullName>
    <description>If not provided, all profiles will see this button. To restrict to specific profiles, admin user can provide a comma-separated list of profile names that will have access to this action button.</description>
    <inlineHelpText>If not provided, all profiles will see this button. To restrict to specific profiles, admin user can provide a comma-separated list of profile names that will have access to this action button.</inlineHelpText>
    <label>Profile Permissions</label>
    <type>TextArea</type>
</CustomField>