force-app/main/default/objects/MUSW__RM_Custom_Buttons__mdt/fields/MUSW__Record_Manage_Setting__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Record_Manage_Setting__c</fullName>
    <label>Record Manage Setting</label>
    <referenceTo>MUSW__Record_Manage_Setting__mdt</referenceTo>
    <relationshipName>Record_Manage_Custom_Buttons</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>